hide vertical overflow to avoid additional scroll-bar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -45,6 +45,7 @@
 
 #testexec-details {
   flex-grow: 2;
+  overflow-y: hidden!important
 }
 
 .navigation-text.login {
